--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body style="background-color: lightgreen;">
     <h1 style="background-color: red; color: green;">Welcome</h1>
+    <h2>Thank you</h2>
 
 
 </body>
